Be smarter about remembering the last used save location

BUG:382080
BUG:353433